--- a/index.html
+++ b/index.html
@@ -6,8 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desh Capital LLC | Home</title>
     <link rel="shortcut icon" type="image/png" href="./Assets/Images/Logo.jpg">
+    <!-- FONTASOME CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <!-- CSS FILE LINK -->
+    <link rel="stylesheet" href="./Styles/headers.css">
+
+
 </head>
 <body>
-    <h1>Welcome To Desh Capital LLC</h1>
+    <!-- HEADER SECTION START -->
+    <nav>
+        <div class="menu-icon">
+            <span class="fas fa-bars"></span>
+        </div>
+        <div class="logo">
+            <img src="./Assets/Images/Logo.jpg" alt="Loading...">
+        </div>
+        <div class="nav-items">
+            <ul>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#">Calculator</a></li>
+                <li><a href="#">Loan Programme</a></li>
+                <li><a href="#">Patners</a></li>
+                <li><a href="#">Appointment</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="search-icon">
+            <span class="fas fa-search"></span>
+        </div>
+        <div class="cancel-icon">
+            <span class="fas fa-times"></span>
+        </div>
+        <form action="#">
+            <input type="search" class="search-data" placeholder="Search" required>
+            <button type="submit" class="fas fa-search"></button>
+        </form>
+    </nav>
+
+    <!-- HEADER SECTION END -->
+
+    <!-- NAV BAR BANGLA START -->
+    <!-- NAV BAR BANGLA END -->
+
+    
+    <h1 style="padding: 100px;">Welcome To Desh Capital LLC</h1>
+
+
+    <!-- JAVASCRIPT FILE LINK -->
+    <script src="./Javascript/headers.js"></script>
 </body>
 </html>
