--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#">Loan Programme</a></li>
                 <li><a href="#">Patners</a></li>
                 <li><a href="#">Appointment</a></li>
+                <li><a href="#">FAQ</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
