--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Calculator</a></li>
                 <li><a href="#">Loan Programme</a></li>
-                <li><a href="#">Patners</a></li>
                 <li><a href="#">Appointment</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Login</a></li>
             </ul>
         </div>
         <div class="search-icon">
