--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a class="logactive" href="#">Login</a></li>
             </ul>
         </div>
         <div class="search-icon">
