--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Calculator</a></li>
-                <li><a href="#">Loan Programme</a></li>
+                <li><a href="#">Mortgage Info.</a></li>
                 <li><a href="#">Appointment</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">About Us</a></li>
@@ -45,11 +45,21 @@
             <button type="submit" class="fas fa-search"></button>
         </form>
     </nav>
+    <!-- NAV BAR BANGLA START -->
+    <div class="bangla">
+        <ul class="bangla-section">
+            <li><a href="">ক্যালকুলেটর</a></li>
+            <li><a href="">মট্গেজ তথ্য</a></li>
+            <li><a href="">সাক্ষাৎ</a></li>
+            <li><a href="">প্রশ্ন ও উত্তর</a></li>
+            <li><a href="">আমরা কারা?</a></li>
+            <li><a href="">যোগাযোগ</a></li>
+        </ul>
+    </div>
+    <!-- NAV BAR BANGLA END -->
 
     <!-- HEADER SECTION END -->
 
-    <!-- NAV BAR BANGLA START -->
-    <!-- NAV BAR BANGLA END -->
 
     
     <h1 style="padding: 100px;">Welcome To Desh Capital LLC</h1>
