--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desh Capital LLC | Home</title>
     <link rel="shortcut icon" type="image/png" href="./Assets/Images/Logo.jpg">
+
     <!-- FONTASOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="./Styles/headers.css">
+    <link rel="stylesheet" href="./Styles/index.css">
 
 
 </head>
@@ -28,7 +31,7 @@
                 <li><a href="#">Calculator</a></li>
                 <li><a href="#">Mortgage Info.</a></li>
                 <li><a href="#">Appointment</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="#">FAQs</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a class="logactive" href="#">Login</a></li>
@@ -60,10 +63,21 @@
 
     <!-- HEADER SECTION END -->
 
-
-    
-    <h1 style="padding: 100px;">Welcome To Desh Capital LLC</h1>
-
+    <!-- MAIN SECTION START -->
+    <section class="main-section">
+        <div class="left-side">
+            <div>
+                <h1 class="left-side-title">Today's Mortgage Rate <br> ( আজকের মর্টগেজ রিপোর্ট )</h1>
+                <p class="left-side-text">This is today's mortgage rate. For more update see here</p>
+                <img class="left-side-img" src="./Assets/Images/Todays Mortgage Rate.jpg" alt="Loading...">
+            </div>
+        </div>
+        <div class="right-side">
+            <img class="right-side-img" src="./Assets/Images/Adds.jpg" alt="Loading...">
+            <img class="right-side-img" src="./Assets/Images/Adds 2.jpeg" alt="Loading...">
+        </div>
+    </section>
+    <!-- MAIN SECTION END -->
 
     <!-- JAVASCRIPT FILE LINK -->
     <script src="./Javascript/headers.js"></script>
