Main Section Todays Mortgage & Adds

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-    <section class="main-section">
+    <!-- TODAYS MORTGAGE RATE & ADD START -->
+    <section class="tmr-add-section">
         <div class="left-side">
             <div>
                 <h1 class="left-side-title">Today's Mortgage Rate <br> ( আজকের মর্টগেজ রিপোর্ট )</h1>
@@ -77,6 +78,13 @@
             <img class="right-side-img" src="./Assets/Images/Adds 2.jpeg" alt="Loading...">
         </div>
     </section>
+    <!-- TODAYS MORTGAGE RATE & ADD END -->
+    <!-- SLIDER START -->
+    <section class="slider">
+
+    </section>
+    <!-- SLIDER END -->
+
     <!-- MAIN SECTION END -->
 
     <!-- JAVASCRIPT FILE LINK -->
