TOP HEAD TEXT & ICONS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,49 +17,62 @@
 
 
 </head>
+
 <body>
     <!-- HEADER SECTION START -->
-    <nav>
-        <div class="menu-icon">
-            <span class="fas fa-bars"></span>
+    <header>
+        <div class="top-section">
+            <h3 class="top-section-title">আপনাদের সেবায় নিয়োজিত ||| বাংলায় কথা বলি</h3>
+            <div >
+                <ul class="icons">
+                    <li><a href=""><i class="fas fa-phone"></i></a></li>
+                    <li><a href=""><i class="fas fa-envelope"></i></a></li>
+                    <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                </ul>
+            </div>
         </div>
-        <div class="logo">
-            <img src="./Assets/Images/Logo.jpg" alt="Loading...">
-        </div>
-        <div class="nav-items">
-            <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">Calculator</a></li>
-                <li><a href="#">Mortgage Info.</a></li>
-                <li><a href="#">Appointment</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a class="logactive" href="#">Login</a></li>
+        <nav>
+            <div class="menu-icon">
+                <span class="fas fa-bars"></span>
+            </div>
+            <div class="logo">
+                <img src="./Assets/Images/Logo.jpg" alt="Loading...">
+            </div>
+            <div class="nav-items">
+                <ul>
+                    <li><a class="active" href="#">Home</a></li>
+                    <li><a href="#">Calculator</a></li>
+                    <li><a href="#">Mortgage Info.</a></li>
+                    <li><a href="#">Appointment</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a class="logactive" href="#">Login</a></li>
+                </ul>
+            </div>
+            <div class="search-icon">
+                <span class="fas fa-search"></span>
+            </div>
+            <div class="cancel-icon">
+                <span class="fas fa-times"></span>
+            </div>
+            <form action="#">
+                <input type="search" class="search-data" placeholder="Search" required>
+                <button type="submit" class="fas fa-search"></button>
+            </form>
+        </nav>
+        <!-- NAV BAR BANGLA START -->
+        <div class="bangla">
+            <ul class="bangla-section">
+                <li><a href="">ক্যালকুলেটর</a></li>
+                <li><a href="">মট্গেজ তথ্য</a></li>
+                <li><a href="">সাক্ষাৎ</a></li>
+                <li><a href="">প্রশ্ন ও উত্তর</a></li>
+                <li><a href="">আমরা কারা?</a></li>
+                <li><a href="">যোগাযোগ</a></li>
             </ul>
         </div>
-        <div class="search-icon">
-            <span class="fas fa-search"></span>
-        </div>
-        <div class="cancel-icon">
-            <span class="fas fa-times"></span>
-        </div>
-        <form action="#">
-            <input type="search" class="search-data" placeholder="Search" required>
-            <button type="submit" class="fas fa-search"></button>
-        </form>
-    </nav>
-    <!-- NAV BAR BANGLA START -->
-    <div class="bangla">
-        <ul class="bangla-section">
-            <li><a href="">ক্যালকুলেটর</a></li>
-            <li><a href="">মট্গেজ তথ্য</a></li>
-            <li><a href="">সাক্ষাৎ</a></li>
-            <li><a href="">প্রশ্ন ও উত্তর</a></li>
-            <li><a href="">আমরা কারা?</a></li>
-            <li><a href="">যোগাযোগ</a></li>
-        </ul>
-    </div>
+    </header>
     <!-- NAV BAR BANGLA END -->
 
     <!-- HEADER SECTION END -->
@@ -90,4 +104,5 @@
     <!-- JAVASCRIPT FILE LINK -->
     <script src="./Javascript/headers.js"></script>
 </body>
+
 </html>
