Top Section Text & ICONS

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <h3 class="top-section-title">আপনাদের সেবায় নিয়োজিত ||| বাংলায় কথা বলি</h3>
             <div >
                 <ul class="icons">
-                    <li><a href=""><i class="fas fa-phone"></i></a></li>
-                    <li><a href=""><i class="fas fa-envelope"></i></a></li>
-                    <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
+                    <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
                 </ul>
             </div>
         </div>
