Top Section Text & ICONS

--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@
     <!-- HEADER SECTION START -->
     <header>
         <div class="top-section">
-            <h3 class="top-section-title">আপনাদের সেবায় নিয়োজিত ||| বাংলায় কথা বলি</h3>
-            <div >
+            <div class="text-slider">
+                <h3 class="top-section-title">আপনাদের সেবায় নিয়োজিত ||| বাংলায় কথা বলি</h3>
+            </div>
+            <div>
                 <ul class="icons">
                     <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
-                    <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
