--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="logo">
                 <img src="./Assets/Images/Logo.jpg" alt="Loading...">
             </div>
-            <div class="nav-items">
+            <div class="nav-bar">
                 <ul>
                     <li><a class="active" href="#">Home</a></li>
                     <li><a href="#">Calculator</a></li>
@@ -54,16 +54,10 @@
                     <li><a class="logactive" href="#">Login</a></li>
                 </ul>
             </div>
-            <div class="search-icon">
-                <span class="fas fa-search"></span>
-            </div>
-            <div class="cancel-icon">
+
+            <div class="cancel-btn">
                 <span class="fas fa-times"></span>
             </div>
-            <form action="#">
-                <input type="search" class="search-data" placeholder="Search" required>
-                <button type="submit" class="fas fa-search"></button>
-            </form>
         </nav>
         <!-- NAV BAR BANGLA START -->
         <div class="bangla">
