Add Section Increase

--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
         <div class="right-side">
             <img class="right-side-img" src="Assets/Images/Adds.jpg" alt="Loading...">
             <img class="right-side-img" src="Assets/Images/Adds 2.jpeg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds.jpg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds 2.jpeg" alt="Loading...">
         </div>
     </section>
 
