--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-    <!-- TODAYS MORTGAGE RATE & ADD START -->
+    <!-- Left Side START -->
+    <!-- TODAYS MORTGAGE RATE START -->
     <section class="tmr-add-section">
         <div class="left-side">
             <div>
@@ -133,7 +134,7 @@
 
 
             </div>
-            <!-- TODAYS MORTGAGE RATE & ADD END -->
+            <!-- TODAYS MORTGAGE RATE END -->
 
             <!-- SLIDER START -->
             <div class="sliders">
@@ -217,7 +218,10 @@
             </div>
             <!-- SLIDER END -->
         </div>
+        <!-- Left Side END -->
 
+
+        <!-- Right Side Add Section START -->
         <div class="right-side">
             <img class="right-side-img" src="Assets/Images/Adds.jpg" alt="Loading...">
             <img class="right-side-img" src="Assets/Images/Adds 2.jpeg" alt="Loading...">
@@ -225,6 +229,46 @@
             <img class="right-side-img" src="Assets/Images/Adds 2.jpeg" alt="Loading...">
         </div>
     </section>
+    <!-- Right Side Add Section END -->
+
+    <hr>
+
+    <!-- HAPPY CLIENT SECTION START -->
+    <section class="feedbacks">
+        <h1 class="feedbacks-title">Feedbacks From Our Clients</h1>
+        <div class="feedback-box">
+            <div class="feedback">
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
+                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+            </div>
+
+            <div class="feedback">
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
+                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+            </div>
+
+            <div class="feedback">
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
+                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+            </div>
+
+            <div class="feedback">
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
+                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+            </div>
+            
+        </div>
+    </section>
+    <!-- HAPPY CLIENT SECTION END -->
+
 
     <!-- MAIN SECTION END -->
 
