--- a/index.html
+++ b/index.html
@@ -233,6 +233,26 @@
 
     <hr>
 
+    <!-- Closest Services Section START -->
+    <section class="closest-services">
+        <h1 class="closest-services-title">Seccessful Closest Service</h1>
+        <div class="closest-service-box">
+            <div class="closest-service">
+                <h1 class="numbers">273</h1>
+                <h3 class="closest-service-title">Loan Closed</h3>
+            </div>
+            <div class="closest-service">
+                <h1 class="numbers">4.5+/5</h1>
+                <h3 class="closest-service-title">Ratings</h3>
+            </div>
+            <div class="closest-service">
+                <h1 class="numbers">10+</h1>
+                <h3 class="closest-service-title">Years Experience</h3>
+            </div>
+        </div>
+    </section>
+    <!-- Closest Services Section END -->
+
     <!-- HAPPY CLIENT SECTION START -->
     <section class="feedbacks">
         <h1 class="feedbacks-title">Feedbacks From Our Clients</h1>
