--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="closest-service">
                 <h1 class="numbers">10+</h1>
-                <h3 class="closest-service-title">Years Experience</h3>
+                <h3 class="closest-service-title">Years <br> Experience</h3>
             </div>
         </div>
     </section>
