--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
     <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/footer.css">
 
 
 </head>
@@ -30,8 +31,7 @@
             <div>
                 <ul class="icons">
                     <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
-                    <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i
-                                class="fab fa-facebook"></i></a>
+                    <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     </li>
                     <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a>
                     </li>
@@ -258,39 +258,64 @@
         <h1 class="feedbacks-title">Feedbacks From Our Clients</h1>
         <div class="feedback-box">
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Rem repellat
                     veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
                     provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
                 <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
             </div>
 
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Rem repellat
                     veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
                     provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
                 <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
             </div>
 
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Rem repellat
                     veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
                     provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
                 <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
             </div>
 
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem repellat
+                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Rem repellat
                     veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
                     provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
                 <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
             </div>
-            
+
         </div>
     </section>
     <!-- HAPPY CLIENT SECTION END -->
-
-
     <!-- MAIN SECTION END -->
+
+    <!-- FOOTER START -->
+    <footer class="footer">
+        <div class="about">
+            <h1 class="footer-title">About Us</h1>
+            <p class="footer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda nihil vel
+                autem magnam eum accusamus porro mollitia, eos ea rerum nemo aperiam repellendus similique maxime,
+                reiciendis animi aliquid quia?</p>
+
+            <ul class="icon">
+                <li><a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            </ul>
+        </div>
+        <div class="quick-links">
+            <h1 class="footer-title">Quick Links</h1>
+        </div>
+        <div class="contact">
+            <h1 class="footer-title">Contact Us</h1>
+        </div>
+    </footer>
+    <!-- FOOTER END -->
 
     <!-- JAVASCRIPT FILE LINK -->
     <script src="Javascript/index.js"></script>
