--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="#">Calculator</a></li>
                     <li><a href="#">Mortgage Info.</a></li>
-                    <!-- <li><a href="#">Loan Programs</a></li> -->
+                    <li><a href="#">Loan Programs</a></li>
                     <li><a href="#">Appointment</a></li>
                     <li><a href="#">FAQs</a></li>
                     <li><a href="#">About Us</a></li>
@@ -68,8 +68,7 @@
             <ul class="bangla-section">
                 <li><a href="">ক্যালকুলেটর</a></li>
                 <li><a href="">মট্গেজ তথ্য</a></li>
-                <!-- <li><a href="">লোন সমূহ</a></li> -->
-                <li><a href="">অ্যাপয়েন্টমেন্ট</a></li>
+                <li><a href="">লোন সমূহ</a></li>
                 <li><a href="">প্রশ্ন ও উত্তর</a></li>
                 <li><a href="">আমরা কারা?</a></li>
                 <li><a href="">যোগাযোগ</a></li>
@@ -281,13 +280,6 @@
                 <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
             </div>
 
-            <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. Rem repellat
-                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
-                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
-                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
-            </div>
 
         </div>
     </section>
@@ -303,16 +295,43 @@
                 reiciendis animi aliquid quia?</p>
 
             <ul class="icon">
-                <li><a href="#" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.facebook.com/deshcapitalllc/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fab fa-youtube"></i></a></li>
                 <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
         </div>
         <div class="quick-links">
             <h1 class="footer-title">Quick Links</h1>
+            <ul class="links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Calculator</a></li>
+                <li><a href="#">Mortgage Info.</a></li>
+                <li><a href="#">Loan Programs</a></li>
+                <li><a href="#">Appointment</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="footer-feedback">
+            <h1 class="footer-title">Feedbacks</h1>
+            <p class="footer-text">Give your feedback here</p>
+            <form action="">
+                <input class="inputs" type="text" placeholder="Please Enter Your Name">
+                <textarea name="" id="" class="inputs" rows="5" placeholder="Please Enter Your Feedbacks"></textarea>
+                <button class="feedback-btn">Submit</button>
+            </form>
+            
         </div>
         <div class="contact">
             <h1 class="footer-title">Contact Us</h1>
+            <iframe title="" class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4248.400548399734!2d-81.48490118459267!3d28.324574404702034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8185579284d3%3A0xeda2f0ec1ecbeecb!2s2627%20Chatham%20Cir%2C%20Kissimmee%2C%20FL%2034746%2C%20USA!5e1!3m2!1sen!2sbd!4v1679847804749!5m2!1sen!2sbd" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p class="contact-info"><span class="contact-info-header">Address:</span> 2627 Chatham Circle <br>Kissimmee, FL 34746</p>
+            <p class="contact-info">M-F 9am 5pm EST</p>
+            <ul class="icon">
+                <li><a href="tel:844 337 4227"><i class="fas fa-phone"></i></a></li>
+                <li><a href="mailto:info@deshcapitalllc.com"><i class="fas fa-envelope"></i></a></li>
+            </ul>
         </div>
     </footer>
     <!-- FOOTER END -->
