Create All Files

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <div class="nav-bar">
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="#">Calculator</a></li>
-                    <li><a href="#">Mortgage Info.</a></li>
-                    <li><a href="#">Loan Programs</a></li>
-                    <li><a href="#">Appointment</a></li>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="calculator.html">Calculator</a></li>
+                    <li><a href="mortgageInfo.html">Mortgage Info.</a></li>
+                    <li><a href="loanPrograms.html">Loan Programs</a></li>
+                    <li><a href="appointment.html">Appointment</a></li>
+                    <li><a href="faqs.html">FAQs</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
+                    <li><a href="contactUs.html">Contact Us</a></li>
                     <li><a class="logactive" href="#">Login</a></li>
                 </ul>
             </div>
@@ -67,12 +67,12 @@
         <!-- NAV BAR BANGLA START -->
         <div class="bangla">
             <ul class="bangla-section">
-                <li><a href="">ক্যালকুলেটর</a></li>
-                <li><a href="">মট্গেজ তথ্য</a></li>
-                <li><a href="">লোন সমূহ</a></li>
-                <li><a href="">প্রশ্ন ও উত্তর</a></li>
-                <li><a href="">আমরা কারা?</a></li>
-                <li><a href="">যোগাযোগ</a></li>
+                <li><a href="calculatorBangla.html">ক্যালকুলেটর</a></li>
+                <li><a href="motgageInfoBangla.html">মট্গেজ তথ্য</a></li>
+                <li><a href="loanProgramsBangla.html">লোন সমূহ</a></li>
+                <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
+                <li><a href="aboutUsBangla.html">আমরা কারা?</a></li>
+                <li><a href="contactUs.html">যোগাযোগ</a></li>
             </ul>
         </div>
     </header>
@@ -306,13 +306,13 @@
             <h1 class="footer-title">Quick Links</h1>
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Calculator</a></li>
-                <li><a href="#">Mortgage Info.</a></li>
-                <li><a href="#">Loan Programs</a></li>
-                <li><a href="#">Appointment</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="calculator.html">Calculator</a></li>
+                <li><a href="mortgageInfo.html">Mortgage Info.</a></li>
+                <li><a href="loanPrograms.html">Loan Programs</a></li>
+                <li><a href="appointment.html">Appointment</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+                <li><a href="contactUs.html">Contact Us</a></li>
             </ul>
         </div>
         <div class="footer-feedback">
