--- a/mortgageInfo.html
+++ b/mortgageInfo.html
@@ -68,7 +68,7 @@
         <div class="bangla">
             <ul class="bangla-section">
                 <li><a href="calculatorBangla.html">ক্যালকুলেটর</a></li>
-                <li><a href="motgageInfoBangla.html">মট্গেজ তথ্য</a></li>
+                <li><a href="mortgageInfoBangla.html">মট্গেজ তথ্য</a></li>
                 <li><a href="loanProgramsBangla.html">লোন সমূহ</a></li>
                 <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
                 <li><a href="aboutUsBangla.html">আমরা কারা?</a></li>
@@ -81,7 +81,11 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <section class="mortgages">
+        <a href="mortgageInfoBangla.html"></a>
+    </section>
+
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
