--- a/mortgageInfo.html
+++ b/mortgageInfo.html
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/mortgage.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -82,7 +82,13 @@
 
     <!-- MAIN SECTION START -->
     <section class="mortgages">
-        <a href="mortgageInfoBangla.html"></a>
+        <a class="switch-btn" href="mortgageInfoBangla.html">বাংলা</a>
+        <h1 class="mortgages-title">Mortgage Information</h1>
+        <hr>
+        <h5 class="mortgage-header">Header</h5>
+        <p class="mortgage-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus accusantium obcaecati ad iusto sequi eum earum minima illum sunt cupiditate.</p>
+        <p class="mortgage-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus cum, eos debitis magnam ducimus eaque optio error blanditiis vel necessitatibus molestias fugiat aut excepturi iste tempora illum nemo quae nostrum voluptatem facere asperiores eius qui est corrupti! Voluptas alias iste soluta aliquid, magni possimus voluptatum dolorem ea accusantium corporis voluptatem?</p>
+        <p class="mortgage-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque mollitia odit blanditiis magni officiis autem corporis velit omnis dolore pariatur, nisi eius doloremque perspiciatis quidem veniam, placeat praesentium dolores. Ipsam.</p>
     </section>
 
     <!-- MAIN SECTION END -->
