Bangla Mortgage Information

--- a/mortgageInfoBangla.html
+++ b/mortgageInfoBangla.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desh Capital LLC | Mortgage Info Ban</title>
+    <title>Desh Capital LLC | মট্গেজ তথ্য</title>
     <link rel="shortcut icon" type="image/png" href="Assets/Images/Logo.jpg">
 
     <!-- FONTASOME CDN -->
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/mortgage.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -81,7 +81,17 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
-     <!-- MAIN SECTION END -->
+    <section class="mortgages">
+        <a class="switch-btn" href="mortgageInfo.html">English</a>
+        <h1 class="mortgages-title">মট্গেজ তথ্য</h1>
+        <hr>
+        <h5 class="mortgage-header">হেডার</h5>
+        <p class="mortgage-text">প্রতিষ্ঠানটি নিজেই একটি অত্যন্ত সফল কোম্পানি। অভিযুক্তদের দ্বারা বিতাড়িত হতে, শুধু তাকে অনুসরণ করতে অন্ধ, তারা তাদের মধ্যে সবচেয়ে কম।</p>
+        <p class="mortgage-text">প্রতিষ্ঠানটি নিজেই একটি অত্যন্ত সফল কোম্পানি। যখন আমরা নির্বাচিত হই, তখন আমরা তাদের একটি বড় ঘৃণার দিকে নিয়ে যাই, এবং সেই বিকল্পটি হল চাটুকারিতা বা প্রয়োজনের দ্বারা ঝামেলা এড়াতে, অথবা কেউ সেই সময়কে বাঁচাতে পারবে না যা আমাদের আনন্দকে দুর্নীতিগ্রস্তের চেয়ে গুরুতর করে তোলে! যদি আনন্দগুলি অন্যথায় কিছু থেকে মুক্ত হয়, তবে আমরা কি সেই আনন্দের ব্যথায় মহান হতে পারি যা তাদের দেহের সুখের জন্য অভিযুক্ত করে?</p>
+        <p class="mortgage-text">প্রতিষ্ঠানটি নিজেই একটি অত্যন্ত সফল কোম্পানি। ভদ্রতা চাটুকারিতাকে ঘৃণা করে না, কিন্তু শরীরের মহান কর্তব্যের সাথে এটি সমস্ত ব্যথা বহন করতে চায়, যদি না আপনি তার ব্যথা দেখতে পান এবং প্রকৃতপক্ষে আমি ক্ষমা করব, বর্তমানের ব্যথাগুলিকে দয়া করে। সে নিজেই।</p>
+    </section>
+
+    <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
     <footer class="footer">
