Bangla Mortgage Information

--- a/mortgageInfoBangla.html
+++ b/mortgageInfoBangla.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="bangla">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -83,7 +83,7 @@
     <!-- MAIN SECTION START -->
     <section class="mortgages">
         <a class="switch-btn" href="mortgageInfo.html">English</a>
-        <h1 class="mortgages-title">মট্গেজ তথ্য</h1>
+        <h1 class="mortgages-title">মটগেজ তথ্য</h1>
         <hr>
         <h5 class="mortgage-header">হেডার</h5>
         <p class="mortgage-text">প্রতিষ্ঠানটি নিজেই একটি অত্যন্ত সফল কোম্পানি। অভিযুক্তদের দ্বারা বিতাড়িত হতে, শুধু তাকে অনুসরণ করতে অন্ধ, তারা তাদের মধ্যে সবচেয়ে কম।</p>
