--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="bangla">
             <ul class="bangla-section">
                 <li><a href="calculatorBangla.html">ক্যালকুলেটর</a></li>
-                <li><a href="mortgageInfoBangla.html">মট্গেজ তথ্য</a></li>
+                <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
                 <li><a href="loanProgramsBangla.html">লোন সমূহ</a></li>
                 <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
                 <li><a href="aboutUsBangla.html">আমরা কারা?</a></li>
